--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,22 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Signaler un bug<span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu" style="min-width: 450px;">
+            <div class="col-md-12">
+              <br>
+              <p>Merci d'expliquer le problème le plus clairement possible, et laisser votre nom / prénom pour espérer une réponse.</p>
+              <%= bootstrap_form_tag(url: "/issue", method: :post) do |f| %>
+                <%= f.text_area(:body, hide_label: true, rows: 4) %>
+                <%= f.primary 'Envoyer' %>
+              <% end %>
+              <br>
+            </div>
+          </ul>
+        </li>
         <% if session.key?(:frankiz_id) %>
           <li><a href="/logout">Se déconnecter</a></li>
         <% end %>
