Bigger font in navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a>Consultation des trigrammes, powered by BôBar, Manou, Gengen et Frankiz</a></li>
+        <li><a><big>Consultation des trigrammes, powered by BôBar, Manou, Gengen et Frankiz</big></a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
