--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -3,13 +3,14 @@
 
   <br><br>
 
-  <h3>Tu penses t'être fait racketter par le BB ?</h3>
-  <h3>Tu ne te souviens pas de ce que tu as bu hier ?</h3>
+  <h3>Peur de la prochaine positivation ?</h3>
+  <h3>Aucun souvenir de ce que tu as bu hier ?</h3>
+  <h3>Tu penses t'être fait arnaquer par le BB ?</h3>
   <h3>Tu veux savoir combien coûtait le Kebab de l'autre soir ?</h3>
 
   <br><br>
 
-  <h1>N'attend plus !</h1>
+  <h1>N'attends plus !</h1>
 
   <br><br>
 
