Try to fix mobile display

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,19 +1,21 @@
 <div class="row text-center">
-  <h1>Consulte ton trigramme</h1>
+  <div class="col-md-12">
+    <h1>Consulte ton trigramme</h1>
 
-  <br><br>
+    <br>
 
-  <h3>Peur de la prochaine positivation ?</h3>
-  <h3>Aucun souvenir de ce que tu as bu hier ?</h3>
-  <h3>Tu penses t'être fait arnaquer par le BB ?</h3>
-  <h3>Tu veux savoir combien coûtait le Kebab de l'autre soir ?</h3>
+    <h3>Peur de la prochaine positivation ?</h3>
+    <h3>Aucun souvenir de ce que tu as bu hier ?</h3>
+    <h3>Tu penses t'être fait arnaquer par le BB ?</h3>
+    <h3>Tu veux savoir combien coûtait le Kebab de l'autre soir ?</h3>
 
-  <br><br>
+    <br><br>
 
-  <h1>N'attends plus !</h1>
+    <h1>N'attends plus !</h1>
 
-  <br><br>
+    <br><br>
 
-  <a href="/fkz_login" class="btn btn-primary btn-lg">Connection Frankiz</a>
+    <a href="/fkz_login" class="btn btn-primary btn-lg">Connection Frankiz</a>
+  </div>
 </div>
 
