Display rotating slogan

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,16 +4,18 @@
 
     <br>
 
-    <h3>Peur de la prochaine positivation ?</h3>
-    <h3>Aucun souvenir de ce que tu as bu hier ?</h3>
-    <h3>Tu penses t'être fait arnaquer par le BB ?</h3>
-    <h3>Tu veux savoir combien coûtait le Kebab de l'autre soir ?</h3>
+    <h3 class="cycle" style="min-height: 2.5em;">
+      <span id="slogan-0">Peur de la prochaine positivation ?</span>
+      <span id="slogan-1">Aucun souvenir de ce que tu as bu hier ?</span>
+      <span id="slogan-2">Tu penses t'être fait arnaquer par le BB ?</span>
+      <span id="slogan-3">Tu veux savoir combien coûtait le Kebab de l'autre soir ?</span>
+    </h3>
 
-    <br><br>
+    <br>
 
     <h1>N'attends plus !</h1>
 
-    <br><br>
+    <br>
 
     <a href="/fkz_login" class="btn btn-primary btn-lg">Connection Frankiz</a>
   </div>
