Keep text shorter

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -8,7 +8,7 @@
       <span id="slogan-0">Peur de la prochaine positivation ?</span>
       <span id="slogan-1">Aucun souvenir de ce que tu as bu hier ?</span>
       <span id="slogan-2">Tu penses t'être fait arnaquer par le BB ?</span>
-      <span id="slogan-3">Tu veux savoir combien coûtait le Kebab de l'autre soir ?</span>
+      <span id="slogan-3">Combien coûtait le kebab de l'autre soir ?</span>
     </h3>
 
     <br>
