Show only 7 days of transactions

--- a/app/views/application/account.html.erb
+++ b/app/views/application/account.html.erb
@@ -3,15 +3,15 @@
     <h2>Bienvenue, <%= @account.first_name %></h2>
     <h3>Ton solde est de <strong class="<%= 'text-danger' if @account.balance < 0 %>"><%= number_to_currency(@account.balance / 100.0) %></strong></h3>
     <% if @account.balance < 0 %>
-      <h4>Viens donc nous faire un chèque !</h4>
+      <h4>Viens donc nous faire un chèque&nbsp;!</h4>
     <% end %>
     <% if @account.total_clopes > 0 %>
-      <h3>Tu as dépensé <strong><%= number_to_currency(@account.total_clopes / 100.0) %></strong> en clopes.</h3>
+      <h3>Tu as dépensé <strong><%= number_to_currency(@account.total_clopes / 100.0) %></strong> en clopes au total.</h3>
     <% end %>
   </div>
 
   <div class="col-md-7 col-md-pull-5">
-    <h3 class="text-center">Voici tes dernières transactions :</h3>
+    <h3 class="text-center">Voici tes transactions des 7 derniers jours&nbsp;:</h3>
 
     <table id="transactions-table" class="table table-condensed table-bordered table-striped table-hover">
       <thead>
