--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -5,10 +5,10 @@
     <br>
 
     <h3 class="cycle" style="min-height: 2.5em;">
-      <span id="slogan-0">Peur de la prochaine positivation ?</span>
-      <span id="slogan-1">Aucun souvenir de ce que tu as bu hier ?</span>
-      <span id="slogan-2">Tu penses t'être fait arnaquer par le BB ?</span>
-      <span id="slogan-3">Combien coûtait le kebab de l'autre soir ?</span>
+      <span id="slogan-0">Peur de la prochaine positivation&nbsp;?</span>
+      <span id="slogan-1">Aucun souvenir de ce que tu as bu hier&nbsp;?</span>
+      <span id="slogan-2">Tu penses t'être fait arnaquer par le BB&nbsp;?</span>
+      <span id="slogan-3">Combien coûtait le kebab de l'autre soir&nbsp;?</span>
     </h3>
 
     <br>
