--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,30 @@
 // 'bootstrap-sprockets' must be imported before 'bootstrap' and 'bootstrap/variables'
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'bootstrap-datepicker3';
+@import 'rails_bootstrap_forms';
+@import 'jquery-ui';
+@import 'jquery-ui/core';
+@import 'jquery-ui/theme';
+@import 'jquery-ui/autocomplete';
+@import 'jquery-ui/button';
+@import 'jquery-ui/datepicker';
+@import 'jquery-ui/menu';
+@import 'jquery-ui/selectmenu';
 
 @font-face {
   font-family: 'Muli' !important;
   src: url('/assets/Muli.woff2') format('woff2') !important;
+}
+
+@mixin placeholder {
+  // scss-lint:disable PseudoElement, VendorPrefix
+  &.placeholder { @content; }
+  &:-moz-placeholder { @content; }
+  &::-moz-placeholder { @content; }
+  &:-ms-input-placeholder { @content; }
+  &::-webkit-input-placeholder { @content; }
+  // scss-lint:enable PseudoElement, VendorPrefix
 }
 
 .navbar-brand {
@@ -17,4 +37,16 @@
 
 body {
   padding-bottom: 25px;
+}
+
+.account-image {
+  margin-bottom: 10px;
+  max-height: 30vh;
+  max-width: 100%;
+}
+
+.amount-form-group {
+  .input-group-btn, .input-group-addon {
+    width: 1% !important;
+  }
 }
