--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,9 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <% if session.key?(:binets_admin) && session[:binets_admin].key?(BOB) %>
+          <li><a href="/events/admin">Administration</a></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Signaler un bug<span class="caret"></span>
