--- a/app/views/event/admin.html.erb
+++ b/app/views/event/admin.html.erb
@@ -23,17 +23,9 @@
           <td><%= e.date %></td>
           <td><%= e.status %></td>
           <td>
-            <% if !e.approved %>
-              <%= bootstrap_form_tag(url: "/event/approve/#{e.id}", method: :post, remote: true) do |f| %>
-                <%= f.primary 'Approuver l\'évènement', class: 'btn btn-xs btn-primary' %>
-              <% end %>
-            <% elsif !e.closed %>
-              <%= bootstrap_form_tag(url: "/event/close/#{e.id}", method: :post, remote: true) do |f| %>
-                <%= f.primary 'Terminer l\'évènement', class: 'btn btn-xs btn-primary' %>
-              <% end %>
-            <% else %>
-              <%= bootstrap_form_tag(url: "/event/open/#{e.id}", method: :post, remote: true) do |f| %>
-                <%= f.primary 'Rouvrir l\'évènement', class: 'btn btn-xs btn-primary' %>
+            <% Event::STATUS_CHANGE[e.status].each do |new_status, description| %>
+              <%= bootstrap_form_tag(url: "/event/status/#{e.id}/#{new_status}", method: :post, remote: true, layout: :inline) do |f| %>
+                <%= f.primary description, class: 'btn btn-xs btn-primary' %>
               <% end %>
             <% end %>
           </td>
