--- a/app/views/event/event.html.erb
+++ b/app/views/event/event.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-push-6 text-center">
-    <% unless @event.closed %>
+    <% if @event.opened? %>
       <h3>Loggue une transaction&nbsp;:</h3>
       <div class="row">
         <div class="col-md-6">
