Center table inside page

--- a/app/views/event/admin.html.erb
+++ b/app/views/event/admin.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <section id="flip-scroll">
-    <table class="table-bordered table-striped table-condensed cf">
+    <table class="table-bordered table-striped table-condensed cf" style="margin: auto;">
       <thead class="cf">
         <tr>
           <td>Demandeur</td>
