--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,8 +13,11 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a><big>Consultation des trigrammes, powered by BôBar, Manou, Gengen et Frankiz</big></a></li>
+      <ul class="nav navbar-nav hidden-md hidden-lg">
+        <li><a><big>Consulter ton trigramme © BôBar</big></a></li>
+      </ul>
+      <ul class="nav navbar-nav visible-md visible-lg">
+        <li><a><big>Consulter ton trigramme © BôBar, Manou, Gengen, Frankiz</big></a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
