--- a/app/views/event/admin.html.erb
+++ b/app/views/event/admin.html.erb
@@ -1,42 +1,46 @@
 <div class="row text-center">
-  <h2>Gestion des évènements</h2>
+  <div class="col-xs-12">
+    <h2>Gestion des évènements</h2>
+  </div>
 </div>
 
 <div class="row">
-  <section id="flip-scroll">
-    <table class="table-bordered table-striped table-condensed cf" style="margin: auto;">
-      <thead class="cf">
-        <tr>
-          <td>Demandeur</td>
-          <td>Binet</td>
-          <td>Evenement</td>
-          <td>Date</td>
-          <td>Statut</td>
-          <td style="min-height: 32px"></td>
-          <td>Valeur totale</td>
-        </tr>
-      </thead>
-      <tbody>
-        <% @events.each do |e| %>
+  <div class="col-xs-12">
+    <section id="flip-scroll">
+      <table class="table-bordered table-striped table-condensed cf" style="margin: auto;">
+        <thead class="cf">
           <tr>
-            <td><%= e.requester.full_name %></td>
-            <td><%= e.binet_id %></td>
-            <td><a href="/event/<%= e.binet_id %>/<%= e.id %>"><%= e.name %></a></td>
-            <td><%= e.date %></td>
-            <td><%= e.readable_status %></td>
-            <td style="min-height: 32px">
-              <% Event::STATUS_CHANGE[e.status].each do |new_status, description| %>
-                <div style="float: left;">
-                  <%= bootstrap_form_tag(url: "/event/status/#{e.id}/#{new_status}", method: :post, remote: true, layout: :inline) do |f| %>
-                    <%= f.primary description, class: 'btn btn-xs btn-primary', style: 'margin: 0 3px;' %>
-                  <% end %>
-                </div>
-              <% end %>
-            </td>
-            <td><%= number_to_currency((@event_values[e.id] || {})[:value].to_f) %></td>
+            <td>Demandeur</td>
+            <td>Binet</td>
+            <td>Evenement</td>
+            <td>Date</td>
+            <td>Statut</td>
+            <td style="min-height: 32px"></td>
+            <td>Valeur totale</td>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </section>
+        </thead>
+        <tbody>
+          <% @events.each do |e| %>
+            <tr>
+              <td><%= e.requester.full_name %></td>
+              <td><%= e.binet_id %></td>
+              <td><a href="/event/<%= e.binet_id %>/<%= e.id %>"><%= e.name %></a></td>
+              <td><%= e.date %></td>
+              <td><%= e.readable_status %></td>
+              <td style="min-height: 32px">
+                <% Event::STATUS_CHANGE[e.status].each do |new_status, description| %>
+                  <div style="float: left;">
+                    <%= bootstrap_form_tag(url: "/event/status/#{e.id}/#{new_status}", method: :post, remote: true, layout: :inline) do |f| %>
+                      <%= f.primary description, class: 'btn btn-xs btn-primary', style: 'margin: 0 3px;' %>
+                    <% end %>
+                  </div>
+                <% end %>
+              </td>
+              <td><%= number_to_currency((@event_values[e.id] || {})[:value].to_f) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </section>
+  </div>
 </div>
