--- a/app/views/event/binet_events.html.erb
+++ b/app/views/event/binet_events.html.erb
@@ -1,26 +1,27 @@
 <div class="row">
-  <h2 class="text-center">Gestion des évènements pour le binet <b><%= @binet[:name] %></b></h2>
+  <div class="col-xs-12">
+    <h2 class="text-center">Gestion des évènements pour le binet <b><%= @binet[:name] %></b></h2>
+  </div>
 </div>
 
 <br><br>
 
 <div class="row">
-  <div class="col-md-4 text-right">
+  <div class="col-md-5 col-sm-4 hidden-xs text-right">
     <h3 style="margin-top: 0;">Crée un nouvel évènement&nbsp;:</h3>
   </div>
-  <%= bootstrap_form_tag(url: "/event/create/#{@binet[:id]}", method: :post, remote: true, layout: :inline) do |f| %>
-    <div class="col-md-2">
+  <div class="visible-xs col-xs-12">
+    <h3 style="margin-top: 0;">Crée un nouvel évènement&nbsp;:</h3>
+  </div>
+  <div class="col-md-7 col-sm-8">
+    <%= bootstrap_form_tag(url: "/event/create/#{@binet[:id]}", method: :post, remote: true, layout: :inline) do |f| %>
       <%= f.text_field :name, hide_label: true, placeholder: 'Nom' %>
-    </div>
-    <div class="col-md-2">
       <%= f.text_field(:date, hide_label: true, placeholder: 'Date',
         'data-provide' => 'datepicker',
         'data-date-format' => 'yyyy-mm-dd',
         'data-date-start-view' => 0,
         'data-date-max-view-mode' => 2,
       ) %>
-    </div>
-    <div class="col-md-2">
       <%= f.form_group do %>
         <%= f.primary 'Créer' %>
       <% end %>
@@ -32,7 +33,7 @@
 
 <% unless @events.empty? %>
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-8 col-md-offset-2 col-xs-12">
       <table class="table table-condensed table-bordered table-striped table-hover">
         <thead>
           <tr>
