--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datepicker3';
+@import 'eonasdan-bootstrap-datetimepicker';
 @import 'rails_bootstrap_forms';
 @import 'jquery-ui';
 @import 'jquery-ui/core';
