Add information pane about events

--- a/app/views/event/binet_events.html.erb
+++ b/app/views/event/binet_events.html.erb
@@ -7,6 +7,44 @@
 <br><br>
 
 <div class="row">
+  <div class="col-sm-12 col-md-8 col-md-offset-2">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <a class="btn-primary" role="button" data-toggle="collapse" href=".event-collapse" aria-expanded="false" aria-controls="event-collapse">
+          <span class="glyphicon glyphicon-collapse-down" aria-hidden="true"></span>
+          Informations à propos des évènements
+        </a>
+      </div>
+      <div class="panel-body event-collapse collapse">
+        Pour organiser un évènement binet avec paiement par trigramme, tu dois:
+        <ul>
+          <li>Commencer par créer l'évènement ici.</li>
+          <li>Les BôBarmans peuvent alors approuver ou refuser l'évènement. Si besoin, vous pourrez aussi échanger des commentaires.</li>
+          <li>Un évènement accepté deviendra automatiquement "en cours" à sa date de début, tu peux alors logguer des consommations.</li>
+          <li>L'évènement "en cours" deviendra "terminé" à sa date de fin, tu ne pourras plus logguer.</li>
+          <li>Une fois l'évènement terminé, tu peux le soumettre pour paiement, cela enverra alors le fichier à débiter aux BôBarmas, et à toi.</li>
+          <li>Finalement, lorsque les transactions auront été débitées sur les trigrammes, tu pourra demander un chèque.</li>
+        </ul>
+        <br>
+        Précisions:
+        <ul>
+          <li>Seuls les admins d'un binet sur Frankiz ont accès aux évènements, et peuvent logguer les transactions.</li>
+          <li>Tu peux logguer aussi bien sur un smartphone que sur un ordinateur.</li>
+          <li>Les photos Frankiz des gens s'affichent pour ne pas se faire rouler, si jamais tu vois uniquement un bateau, c'est qu'il faut autoriser les cookies tiers, plus d'explication:
+            <ul>
+              <li><a href="https://support.google.com/chrome/answer/95647">Ici</a> pour Chrome.</li>
+              <li><a href="https://support.mozilla.org/fr/kb/desactiver-cookies-tiers">Ici</a> pour Firefox.</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br><br>
+
+<div class="row">
   <div class="col-md-5 col-sm-4 hidden-xs text-right">
     <h3 style="margin-top: 0;">Crée un nouvel évènement&nbsp;:</h3>
   </div>
