Fix french ortograph

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -17,6 +17,6 @@
 
     <br>
 
-    <a href="/fkz_login" class="btn btn-primary btn-lg">Connection Frankiz</a>
+    <a href="/fkz_login" class="btn btn-primary btn-lg">Connexion Frankiz</a>
   </div>
 </div>
