--- a/app/views/application/account.html.erb
+++ b/app/views/application/account.html.erb
@@ -23,6 +23,13 @@
   </div>
 
   <div class="col-md-7 col-md-pull-5">
+    <% if session[:admin] %>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <input id="account-admin-search" type="text" class="form-control" placeholder="Recherche (trigramme ou nom / prénom)">
+        </div>
+      </div>
+    <% end %>
     <% if @transactions.empty? %>
       <h3 class="text-center">Aucune conso sur les 7 derniers jours, passe prendre une bière&nbsp;!</h3>
     <% else %>
