--- a/app/views/event/binet_events.html.erb
+++ b/app/views/event/binet_events.html.erb
@@ -22,7 +22,7 @@
           <li>Les BôBarmans peuvent alors approuver ou refuser l'évènement. Si besoin, vous pourrez aussi échanger des commentaires.</li>
           <li>Un évènement accepté deviendra automatiquement "en cours" à sa date de début, tu peux alors logguer des consommations.</li>
           <li>L'évènement "en cours" deviendra "terminé" à sa date de fin, tu ne pourras plus logguer.</li>
-          <li>Une fois l'évènement terminé, tu peux le soumettre pour paiement, cela enverra alors le fichier à débiter aux BôBarmas, et à toi.</li>
+          <li>Une fois l'évènement terminé, tu peux le soumettre pour paiement, cela enverra alors le fichier à débiter aux BôBarmans, et à toi.</li>
           <li>Finalement, lorsque les transactions auront été débitées sur les trigrammes, tu pourra demander un chèque.</li>
         </ul>
         <br>
